# trustgraph-security

./: .env.example  .gitignore  ARCHITECTURE.md  CONCEPTS.md  DEPLOY.md  ENTERPRISE.md  HACKATHON.md  LANDSCAPE.md  LICENSE  Makefile  PRIMER.md  README.md  TEST_REPORT.md  WALKTHROUGH.md
apps/api/: Dockerfile  pyproject.toml
apps/api/tests/: test_normalize.py
apps/api/trustgraph_security/: __init__.py  auth.py  celery_app.py  feeds.py  main.py  normalize.py  planner.py  schema.py  seed.py  seed_sandbox.py  settings.py  tg_client.py
apps/demo_target/: Dockerfile
apps/demo_target/demo_target/: __init__.py  main.py
apps/ui/: Dockerfile  nginx.conf  package.json
apps/ui/client/: index.html
apps/ui/client/src/: App.tsx  index.css
apps/ui/client/src/lib/: api.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/trustgraph_worker/: __init__.py  api_client.py  celery_app.py  pentest.py  scanners.py
infra/compose/: docker-compose.sandbox.yml  docker-compose.yml
prototype/: README.md  guided_demo.py  repo_to_tasks.py
prototype/samples/: README.md  juice_shop_graph.json  juice_shop_signals.json  juice_shop_tasks.json
sandbox/juice-shop/: Makefile  README.md  docker-compose.localstack.yml
sandbox/juice-shop/terraform/: alb.tf  ecs.tf  iam.tf  networking.tf  outputs.tf  providers.tf  variables.tf
