[project]
name = "trustgraph-security"
version = "0.1.0"
description = "Production security control plane on top of trustgraph-ai"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "httpx==0.28.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",  # passlib 1.7.4 incompatible with bcrypt >=4.1
  "celery[redis]==5.4.0",
  "redis==5.2.1",
  "rdflib==7.1.1",
  "structlog==24.4.0",
  "prometheus-client==0.21.1",
  "opentelemetry-api==1.29.0",
  "opentelemetry-sdk==1.29.0",
  "opentelemetry-instrumentation-fastapi==0.50b0",
  "boto3==1.35.84",
  "PyGithub==2.5.0",
  "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-asyncio==0.25.0", "respx==0.22.0", "ruff==0.8.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trustgraph_security"]
